--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-credit-cards": "^0.8.3",
+    "react-disable": "^0.1.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-imask": "^6.0.7",
+    "react-input-mask": "^2.0.4",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "react-spring": "^9.1.0",
+    "react-typical": "^0.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@iconify/icons-logos": "^1.1.9",
+    "@iconify/react": "^1.1.4"
   }
 }
